--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<img src="https://imdeepak0001.github.io/pfp.png" 
 				     class="img-circle" width="50%"/>
 			</figure>
-			<h1>DeepaKSabharwal</h1>
+			<h1>DeepaK</h1>
 			<h2>@I_m_Deepak0001</h2>
 			<br />
 			<div class="social">
