--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
         var path = "/";
     }
     if (path == "/source" || path == "/source/") {
-        var path = "/justaprudev.github.io";
+        var path = "/Imdeepak0001.github.io";
     }
-    window.location.replace("https://github.com/justaprudev" + path)
+    window.location.replace("https://github.com/Imdeepak0001" + path)
 </script>
