--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
 				<img src="https://imdeepak0001.github.io/pfp.png" 
 				     class="img-circle" width="50%"/>
 			</figure>
-			<h1>DeepaK</h1>
+			<h1>DEEPAK SABHARWAL</h1>
 			<h2>@I_m_Deepak0001</h2>
 			<br />
 			<div class="social">
 				<a href="https://twitter.com/I_m_Deepak0001" target="_blank"><img alt="Twitter" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" /></a>
 				&nbsp;&nbsp;
 				<a href="https://github.com/imdeepak0001" target="_blank"><img alt="Github" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" /><a>
+					<a href="https://www.instagram.com/I_m_Deepak0001/">
+  <img align="centre" alt="Deepak's Instagram" width="29px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/instagram.svg" />
+</a>
+					<a href="https://www.youtube.com/WhoDeepak/">
+  <img align="centre" alt="Deepak's YouTube" width="38px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/youtube.svg" />
+</a>  
+  <a href="https://forum.xda-developers.com/member.php?u=10425647/">
+  <img align="centre" alt="Jaishnav's XDA" width="43px" src="https://cdn.jsdelivr.net/npm/simple-icons@3.3.0/icons/xdadevelopers.svg" />
 				&nbsp;&nbsp;
             <a href="https://t.me/I_m_Deepak0001" target="_blank"><img alt="Telegram" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/telegram.svg" /><a>
 			</ul><br/><br/>
