--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Deepak</title>
+	<title>Deepak Sabharwal</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -36,8 +36,8 @@
 				<img src="https://imdeepak0001.github.io/pfp.png" 
 				     class="img-circle" width="50%"/>
 			</figure>
-			<h1>DEEPAK SABHARWAL</h1>
-			<h2>@I_m_Deepak0001</h2>
+			<h1>Deepak</h1>
+			<h2>Connect With Me</h2>
 			<br />
 			<div class="social">
 				<a href="https://twitter.com/I_m_Deepak0001" target="_blank"><img alt="Twitter" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/twitter.svg" /></a>
