--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div class="main-content">
 			<figure>
 				<br/><br/><br/>
-				<img src="https://imdeepak0001.github.io/pfp.png" 
+				<img src="https://thedeepaksabharwal.github.io/pfp.png" 
 				     class="img-circle" width="50%"/>
 			</figure>
 			<h1>Deepak</h1>
