--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </a>  
 				&nbsp;&nbsp;
 				
-				<a href="https://github.com/imdeepak0001" target="_blank"><img alt="Github" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" /><a>
+				<a href="https://github.com/thedeepaksabharwal" target="_blank"><img alt="Github" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" /><a>
 			&nbsp;&nbsp;		
 					
   <a href="https://forum.xda-developers.com/member.php?u=10425647/">
