Fixed Broken Links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 		<div class="main-content">
 			<figure>
 				<br/><br/><br/>
-				<img src="https://thedeepaksabharwal.github.io/pfp.png" 
+				<img src="https://deepaksabharwaal.github.io/pfp.png" 
 				     class="img-circle" width="50%"/>
 			</figure>
-			<h1>Deepak</h1>
+			<h1>
+			</h1>
 			<h2>Connect With Me</h2>
 			<br />
 			<div class="social">
@@ -45,7 +46,7 @@
 </a>  
 				&nbsp;&nbsp;
 				
-				<a href="https://github.com/thedeepaksabharwal" target="_blank"><img alt="Github" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" /><a>
+				<a href="https://github.com/deepaksabharwaal" target="_blank"><img alt="Github" width="22px" src="https://cdn.jsdelivr.net/npm/simple-icons@v3/icons/github.svg" /><a>
 			&nbsp;&nbsp;		
 					
   <a href="https://forum.xda-developers.com/member.php?u=10425647/">
