Fixed Profile Link

--- a/404.html
+++ b/404.html
@@ -9,5 +9,5 @@
     if (path == "/source" || path == "/source/") {
         var path = "/thedeepaksabharwal.github.io";
     }
-    window.location.replace("https://github.com/thedeepaksabharwal" + path)
+    window.location.replace("https://github.com/deepaksabharwaal" + path)
 </script>
