--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<meta property="og:title" content="Gaurav 4 C | Aaronsburg | Renter Profile">
+<meta property="og:site_name" content="Bob Ai">
+<meta property="og:url" content="https://development.bob.ai/rp?partner=32035">
+<meta property="og:description" content="I'm looking for my next home in Austin, and it's really important that it has four bedrooms because I need the space to fit my whole family.">
+<meta property="og:type" content="profile">
+<meta property="og:image" content="https://development.bob.ai/assets/img/bob.ai_color_inv%202%20(1).svg">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@boodskapper_inc">
+<meta name="twitter:title" content="Gaurav 4 C | Aaronsburg | Renter Profile">
+<meta name="twitter:image" content="https://development.bob.ai/assets/img/bob.ai_color_inv%202%20(1).svg">
+<meta name="twitter:player" content="https://development.bob.ai/rp?partner=32035">
+<meta name="twitter:description" content="I'm looking for my next home in Austin, and it's really important that it has four bedrooms because I need the space to fit my whole family.">
+
 </head>
 <body>
 	<div id="particles-js">
